--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wekyun/wekman_tool",
+    "name": "wekyun/webman_tool",
     "description": "webman",
     "type": "library",
     "require": {
