--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Wekyun\\WekmanTool\\": "src/"
+            "Wekyun\\WebmanTool\\": "src/"
         }
     },
     "authors": [
