--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "webman tools",
     "type": "library",
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.2"
     },
     "license": "MIT",
     "autoload": {
